// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`changes the class when hovered 1`] = `
<div
  page="http://www.facebook.com"
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "height": "100%",
      "justifyContent": "center",
    }
  }
>
  Facebook
</div>
`;

exports[`properly escapes quotes 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "height": "100%",
      "justifyContent": "center",
    }
  }
>
  "Facebook" \\'is \\ 'awesome'
</div>
`;

exports[`renders as an anchor when no page is set 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "height": "100%",
      "justifyContent": "center",
    }
  }
>
  Facebook
</div>
`;

exports[`renders correctly 1`] = `
<div
  page="http://www.facebook.com"
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "height": "100%",
      "justifyContent": "center",
    }
  }
>
  Facebook
</div>
`;
